# Operating-Systems

./: CMakeLists.txt  README.md  build.sh  client.cpp  conn.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_sock.cpp  conn_sock.h  host.cpp  test.sh
lab1/: Config.cpp  Config.h  MyDaemon.cpp  MyDaemon.h  build.sh  config.txt  main.cpp  utils.cpp  utils.h
lab3/: Makefile  README.md  main.cpp
lab3/queues/: mcsp_queue.h
lab3/sets/: fine_set.h  node.h
lab3/tests/: benchmark.h  test_queues.h  test_sets.h
